# keen

./: Cargo.toml  README.md  test.json
scripts/: install.sh
src/: args.rs  check.rs  install.rs  main.rs  run.rs  utils.rs
